--- a/startup.service
+++ b/startup.service
@@ -1,10 +1,10 @@
 [Unit]
-Description=Some python script
+Description=Listening
 After=network.target
 
 [Service]
-ExecStart=/usr/bin/python3 fromHost.py
-WorkingDirectory=/bin
+ExecStart=/usr/bin/python3 /home/matija/Projects/socket-test/fromHost.py
+WorkingDirectory=/home/matija/Projects/socket-test
 StandardOutput=inherit
 StandardError=inherit
 Restart=always
